feet(project)✨: Rewrite old code(on SolidJS) to Svelte

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,5 @@
 {
-  "hello_world": "Hello World"
+  "name": "Leonid Dyachenko (aka. Horvitz)",
+  "position": "SRE Engineer",
+  "company": "Centr-invest \uD83D\uDC9A"
 }
