--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,3 +1,5 @@
 {
-  "hello_world": "Привет Мир"
+  "name": "Леонид Дьяченко (aka. Horvitz)",
+  "position": "SRE Инженер",
+  "company": "Центр-инвест \uD83D\uDC9A"
 }
