feet(i18n)✨: Rewrite i18n jsons

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "name": "Leonid Dyachenko (aka. Horvitz)",
+  "name": "Leonid Dyachenko",
   "position": "SRE Engineer",
   "company": "Centr-invest \uD83D\uDC9A"
 }
