--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,5 +1,5 @@
 {
-  "name": "Леонид Дьяченко (aka. Horvitz)",
+  "name": "Леонид Дьяченко",
   "position": "SRE Инженер",
   "company": "Центр-инвест \uD83D\uDC9A"
 }
