feet(project)✨: Update project to Sergey Sabbath

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,5 +1,5 @@
 {
-  "name": "Леонид Дьяченко",
+  "name": "Сергей Задорожный",
   "position": "SRE Инженер",
   "company": "Центр-инвест \uD83D\uDC9A"
 }
