--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "name": "Leonid Dyachenko",
+  "name": "Sergey Zadorozhny",
   "position": "SRE Engineer",
   "company": "Centr-invest \uD83D\uDC9A"
 }
