feet(html/css)✨: Add documentation block

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,7 @@
 {
   "name": "Leonid Dyachenko",
   "position": "SRE Engineer",
-  "company": "Centr-invest \uD83D\uDC9A"
+  "company": "Centr-invest \uD83D\uDC9A",
+  "documentation_name": "I suggest you read my Docs)",
+  "documentation_button": "Docs"
 }
