--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "name": "Leonid Dyachenko",
   "position": "SRE Engineer",
-  "company": "Centr-invest \uD83D\uDC9A",
+  "company": "Centr-invest 💚",
   "documentation_name": "I suggest you read my Docs)",
   "documentation_button": "Docs"
 }
